Camino only - Bug 421243: Pre-launch feed handlers to make sure they are registered with LS and trusted by the system. r/sr=pink